--- a/app/views/jobs/index.html.slim
+++ b/app/views/jobs/index.html.slim
@@ -1,23 +1,23 @@
 - content_for(:title) do
-  | 创业职业
+  | #{t('.title')}
 .job-show
   .head.top-blank
     .row
       .small-12.columns
-        h1 创业工作
-        p 远程办公, 自由时间, 激情工作
+        h1 #{t('.head.title')}
+        p #{t('.head.description')}
   .content
     .row
       .small-12.columns
         form ng-submit='search()' ng-controller='JobSearchController'
           .row.search.collapse
             .small-9.medium-6.large-4.columns
-              input type='text' ng-model='q' ng-init='q="#{params[:q]}"' placeholder='输入工作职位: 如 Ruby on Rails 开发'
+              input type='text' ng-model='q' ng-init='q="#{params[:q]}"' placeholder=t('.search_placeholder')
             .small-3.medium-1.large-1.end.columns
-              a.button.postfix ng-click='search()' 工作搜索
+              a.button.postfix ng-click='search()' #{t('.search')}
 
         - if @person_requires.blank?
-          p.no-content 未查询到相关工作需求, 请尝试更换关键字
+          p.no-content #{t('.no_content')}
         - else
           = render partial: "person_requires", locals: { person_requires: @person_requires }
         = paginate @person_requires,params: { q: params[:q] }
