--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -170,7 +170,7 @@
                       .row
                         .small-4.columns
                           .type
-                            | #{t('start-page.startup_job.salary')}
+                            | #{t('start-page.job.salary')}
                         .small-8.columns
                           .item.right.ng-cloak
                             | {{ #{person_require.pay} | nfcurrency }}
@@ -178,7 +178,7 @@
                       .row
                         .small-4.columns
                           .type
-                            | #{t('start-page.startup_job.title')}
+                            | #{t('start-page.job.title')}
                         .small-8.columns
                           .item.right
                             | #{person_require.title}
@@ -186,7 +186,7 @@
                       .row
                         .small-4.columns
                           .type
-                            | #{t('start-page.startup_job.option')}
+                            | #{t('start-page.job.option')}
                         .small-8.columns
                           .item.right
                             | #{person_require.option} %
@@ -205,7 +205,7 @@
                       .row
                         .small-4.columns
                           .type
-                            | #{t('start-page.startup_job.salary')}
+                            | #{t('start-page.job.salary')}
                         .small-8.columns
                           .item.right.ng-cloak
                             | -
@@ -213,7 +213,7 @@
                       .row
                         .small-4.columns
                           .type
-                            | #{t('start-page.startup_job.title')}
+                            | #{t('start-page.job.title')}
                         .small-8.columns
                           .item
                             | -
@@ -221,7 +221,7 @@
                       .row
                         .small-4.columns
                           .type
-                            | #{t('start-page.startup_job.option')}
+                            | #{t('start-page.job.option')}
                         .small-8.columns
                           .item
                             | -
