dropmenu adjust for english version

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -109,11 +109,11 @@ a.user-link {
   top: 4.2rem;
   z-index: 9999;
   right: 1.875rem;
-  max-width: 25rem;
+  width: 25rem;
 
   @media #{$small-only} {
     right: 0.5rem;
-    max-width: 15rem;
+    width: 12rem;
   }
 
   padding: 0 1rem;
@@ -142,7 +142,7 @@ a.user-link {
     ul {
       margin: 0;
       padding: 1rem 2rem;
-      
+
       li {
         text-overflow: ellipsis;
         overflow: hidden;
