--- a/app/assets/stylesheets/components/back_link.scss
+++ b/app/assets/stylesheets/components/back_link.scss
@@ -2,7 +2,7 @@
   display: block;
   position: relative;
   padding-bottom: 2rem;
-  border-bottom: 1px solid #ddd;
+  //border-bottom: 1px solid #ddd;
   margin-bottom: 1rem;
   font-size: 1.5rem;
 
