--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  border-top: 1px solid #eee;
+  //border-top: 1px solid #eee;
   font-size: 0.875rem;
 
   .inline-list li a {
