--- a/app/assets/stylesheets/components/list.scss
+++ b/app/assets/stylesheets/components/list.scss
@@ -3,16 +3,16 @@ ul.list {
   text-align: center;
   padding-bottom: 2rem;
   margin-bottom: 2rem;
-  border-bottom: 1px solid #ddd;
+  //border-bottom: 1px solid #ddd;
   margin-left: 0;
   margin-right: 0;
   li {
     margin-bottom: 1rem;
-    border: 1px solid #ddd;
+    //border: 1px solid #ddd;
     padding: 0;
 
     a {
-      border: 1px solid #ddd;
+      //border: 1px solid #ddd;
       padding: 1.5rem 0;
       display: inline-block;
       width: 100%;
