--- a/app/assets/stylesheets/components/load_button.scss
+++ b/app/assets/stylesheets/components/load_button.scss
@@ -4,7 +4,7 @@
   button {
     background-color: transparent;
     color: #333333;
-    border: 1px solid #eee;
+    //border: 1px solid #eee;
     padding: 0.5rem 0;
     &:focus {
       outline-style: none;
