--- a/app/assets/stylesheets/explore_all.scss
+++ b/app/assets/stylesheets/explore_all.scss
@@ -54,7 +54,7 @@
 
 
   .projects {
-    border-top: 1px solid #fcfcfc;
+    //border-top: 1px solid #fcfcfc;
 
     .paginate {
       margin-top: 2rem;
