--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -19,7 +19,7 @@
     .search {
       background-color: white;
       padding: 2rem;
-      border: 1px solid #eee;
+      //border: 1px solid #eee;
     }
 
     .jobs-wrapper {
@@ -29,7 +29,7 @@
   }
 
   .job-project {
-    border-bottom: 1px solid #eee;
+    //border-bottom: 1px solid #eee;
     margin: 1rem 0;
     padding: 2rem 1rem;
 
