--- a/app/assets/stylesheets/talk.scss
+++ b/app/assets/stylesheets/talk.scss
@@ -6,7 +6,7 @@
 
   .title {
     color: #444;
-    border-bottom: 1px solid #ddd;
+    //border-bottom: 1px solid #ddd;
     padding-bottom: 0.5rem;
     margin-bottom: 1rem;
   }
