--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -21,7 +21,7 @@
   }
 
   .event > .box {
-    border-top: 1px solid #f1f1f1 !important;
+    //border-top: 1px solid #f1f1f1 !important;
     padding-top: 2rem !important;
   }
 
@@ -31,7 +31,7 @@
       border-top: none;
       padding-top: 0;
     }
-    border-top: 1px solid #f1f1f1;
+    //border-top: 1px solid #f1f1f1;
     padding-top: 2rem;
 
     .type {
