--- a/app/assets/stylesheets/admin/admin.scss
+++ b/app/assets/stylesheets/admin/admin.scss
@@ -1,6 +1,6 @@
 .dashboard {
   background-color: white;
-  border-top: 1px solid #ddd;
+  //border-top: 1px solid #ddd;
 
   .dash-title {
     padding: 2rem 0;
