--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -11,7 +11,7 @@
 }
 
 .category-projects {
-  border-top: 1px solid #ddd;
+  //border-top: 1px solid #ddd;
 
   .no-content {
     padding-top: 1rem;
