--- a/app/assets/stylesheets/components/deliver_project.scss
+++ b/app/assets/stylesheets/components/deliver_project.scss
@@ -14,8 +14,8 @@
 
   .project-img {
     padding: 0.3125rem;
-    border: 1px solid #e9e9e9;
-    border-radius: 5px;
+    //border: 1px solid #e9e9e9;
+    //border-radius: 5px;
     background: white;
   }
 
