--- a/app/assets/stylesheets/components/job_box.scss
+++ b/app/assets/stylesheets/components/job_box.scss
@@ -1,5 +1,5 @@
 .job-box {
-  border: 1px solid #ddd;
+  //border: 1px solid #ddd;
   padding: 1rem 0;
   margin: 1rem;
   table {
@@ -25,7 +25,7 @@
     padding: 1rem 0;
     color: #666;
     font-weight: 500;
-    border-bottom: 1px dashed #666;
+    //border-bottom: 1px dashed #666;
 
     .job-pay, .flag {
       float: right;
