--- a/app/assets/stylesheets/components/operate.scss
+++ b/app/assets/stylesheets/components/operate.scss
@@ -12,7 +12,7 @@
   a {
     display: inline-block;
     width: 100%;
-    border: 1px solid #ddd;
+    //border: 1px solid #ddd;
     padding: 0.625rem 0;
     margin: 0.5rem 0;
     border-radius: 5rem;
