--- a/app/assets/stylesheets/components/project_head.scss
+++ b/app/assets/stylesheets/components/project_head.scss
@@ -10,8 +10,8 @@
 
       margin: auto;
       padding: 0.3125rem;
-      border: 1px solid #e9e9e9;
-      border-radius: 5px;
+      //border: 1px solid #e9e9e9;
+      //border-radius: 5px;
       background: white;
 
       //img {
@@ -76,8 +76,8 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 100px;
-        height: 100px;
+        //width: 100px;
+        //height: 100px;
       }
 
       .status {
@@ -149,14 +149,14 @@
   margin-bottom: 3rem;
   .text {
     float: left;
-    margin-top: 6px;
+    //margin-top: 6px;
     color: #999;
     font-size: 95%;
     margin-right: 1rem;
   }
   a .jiathis_txt{
     background: none !important;
-    margin-left: -15px;
+    //margin-left: -15px;
 
     .fa {
       color: #999;
