--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -34,7 +34,7 @@
   .project {
     text-align: center;
     margin-bottom: 2rem;
-    border-bottom: 1px dashed #AAA;
+    //border-bottom: 1px dashed #AAA;
     padding-bottom: 1rem;
 
     img {
@@ -86,18 +86,18 @@
   }
 
   .box {
-    border: 1px solid $my-project-border-color;
+    //border: 1px solid $my-project-border-color;
     background-color: white;
     padding: 2rem 0;
 
     .head {
       padding: 0rem 2rem;
       margin-bottom: 2rem;
-      border-bottom: 1px dashed #ddd;
+      //border-bottom: 1px dashed #ddd;
       padding-bottom: 2rem;
 
       img {
-        border: 1px solid $my-project-border-color;
+        //border: 1px solid $my-project-border-color;
       }
 
       .subtitle {
