--- a/app/assets/stylesheets/investors.scss
+++ b/app/assets/stylesheets/investors.scss
@@ -50,7 +50,7 @@
     background-color: white;
     padding: 2rem 1rem;
     margin: 0;
-    border: 1px solid #fcfcfc;
+    //border: 1px solid #fcfcfc;
     
     img {
       border-radius: 50%;
@@ -87,7 +87,7 @@
         color: #eee;
         font-size: 0.875rem;
         padding: 0.325rem 0.5rem;
-        border-radius: 5px;
+        //border-radius: 5px;
         background-color: $primary-color;
       }
     }
