--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -10,8 +10,8 @@
     margin: 0;
     margin-top: 2rem;
     padding-top: 2rem;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    //border-top: 1px solid #ddd;
+    //border-bottom: 1px solid #ddd;
     .list {
       text-align: center;
       padding-bottom: 0;
@@ -24,7 +24,7 @@
         padding-bottom: 1.875rem;
       }
       .active {
-        border-bottom: 2px solid #d26911;
+        //border-bottom: 2px solid #d26911;
       }
     }
   }
