--- a/app/assets/stylesheets/project_edit.scss
+++ b/app/assets/stylesheets/project_edit.scss
@@ -1,6 +1,6 @@
 .project-edit {
   .head {
-    border-bottom: 1px solid #ddd;
+    //border-bottom: 1px solid #ddd;
     position: relative;
     padding-bottom: 1rem;
   }
