--- a/app/assets/stylesheets/project_new.scss
+++ b/app/assets/stylesheets/project_new.scss
@@ -1,7 +1,7 @@
 .project-new {
 
   .title {
-    border-bottom: 1px solid #ddd;
+    //border-bottom: 1px solid #ddd;
     padding-bottom: 0.5rem;
     margin-bottom: 0.5rem;
   }
@@ -27,7 +27,7 @@
       position: absolute;
       list-style-type: none;
       margin-left: 0;
-      border: 1px solid #aaa;
+      //border: 1px solid #aaa;
       z-index: 2;
       background-color: white;
       width: 100%;
@@ -58,7 +58,7 @@
     } 
 
     .job-box {
-      border: 1px solid #ddd;
+      //border: 1px solid #ddd;
       padding: 1rem 0;
       margin: 1rem;
       table {
@@ -72,7 +72,7 @@
 
   .head, .categories {
     overflow: auto;
-    max-height: 400px;
+    //max-height: 400px;
 
     a:hover {
       background-color: #DEF3FF;
@@ -104,7 +104,7 @@
   }
 
   .content {
-    border: 1px solid #ddd;
+    //border: 1px solid #ddd;
     padding: 0.3rem 0.5rem;
     margin: 0.5rem 0;
     .revert {
