--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -8,7 +8,7 @@
   }
 
   .projects, .jobs, .investors {
-    border-top: 1px solid #fcfcfc;
+    //border-top: 1px solid #fcfcfc;
     margin-bottom: 1.5rem;
   }
 
