--- a/app/assets/stylesheets/team.scss
+++ b/app/assets/stylesheets/team.scss
@@ -1,13 +1,13 @@
 .team {
   .title {
-    border-bottom: 1px solid #ddd;
+    //border-bottom: 1px solid #ddd;
     padding-bottom: 0.5rem;
     margin-bottom: 0.5rem;
   }
   .owner {
     padding: 2rem 0 1rem;
     margin-bottom: 1rem;
-    border-bottom: 1px solid #ddd;
+    //border-bottom: 1px solid #ddd;
     font-size: 110%;
   }
 
@@ -16,7 +16,7 @@
       line-height: 1.2;
     }
     li {
-      border-bottom: 1px dashed #ddd;
+      //border-bottom: 1px dashed #ddd;
       margin-bottom: 1rem;
     }
   }
