--- a/app/views/common/_project_list_item.html.slim
+++ b/app/views/common/_project_list_item.html.slim
@@ -1,7 +1,10 @@
 .row.project-list-item
   .small-3.medium-2.columns
     = link_to project_path(project) do
-      - image_tag project.logo.image_url
+      - if project.logo.present?
+        = image_tag project.logo.image_url
+      - else
+        = image_tag 'default-project.jpg'
   .small-9.medium-10.columns
     .name-area
       h4.name
